v0.0.7

* [BGBUILD-131] Check if OS is supported before executing the plugin

v0.0.6

* [BGBUILD-117] Remove Fedora 11 and 12 support
* [BGBUILD-113] Allow to specify supported file formats for operating system plugin
* [BGBUILD-73] Add support for kickstart files

v0.0.5

* [BGBUILD-106] No plugin-manager require for fedora os plugin

v0.0.4

* [BGBUILD-64] Add support for Fedora 14

v0.0.3

* [BGBUILD-46] Allow building 32 bit images on 64 bit arch

v0.0.2

* Installing required packages for OS/arch combination 

v0.0.1

* First release
