@@ -100,7 +100,7 @@ module BoxGrinder
 
     def generate_package_list
       packages = []
-      for package in @appliance_config.packages.includes
+      for package in @appliance_config.packages
         packages << package unless package.match /^@/
       end
       packages
