@@ -15,9 +15,9 @@ network --bootproto=dhcp --device=eth0 --onboot=on
 services --enabled=network
 <% end %>
 
-rootpw --iscrypted <%= root_password.crypt((0...8).map { 65.+(rand(25)).chr }.join) %>
+rootpw --iscrypted <%= appliance_config.os.password.crypt((0...8).map { 65.+(rand(25)).chr }.join) %>
 
-<% partitions.each do |root, partition| %>
+<% appliance_config.hardware.partitions.each do |root, partition| %>
 part <%= root %> --size <%= (partition['size'].to_f * 1024).to_i %> --fstype <%= partition['type'] %> <% unless partition['options'].nil? %> --fsoptions '<%= partition['options'] %>' <% end %> <% if partition['passphrase'] %> --encrypted --passphrase='<%= partition['passphrase'] %>' <% end %> --ondisk sda --label <%= root %><% end %>
 
 <% for repo in repos %>
@@ -25,7 +25,7 @@ part <%= root %> --size <%= (partition['size'].to_f * 1024).to_i %> --fstype <%=
 
 %packages
 
-<% for package in packages %>
+<% appliance_config.packages.each do |package| %>
   <%= package %><% end %>
 %end
 %post
