@@ -79,6 +79,7 @@ popd
 - [BGBUILD-126] Use encrypted password in kickstart files
 - [BGBUILD-129] Use partitions labels instead of device path in grub and fstab
 - [BGBUILD-72] Add support for growing (not pre-allocated) disks for KVM/Xen
+- [BGBUILD-101] Don't use 'includes' subsection when specifying packages
 
 * Tue Dec 21 2010  <mgoldman@redhat.com> - 0.0.10-1
 - Updated to upstream version: 0.0.10
