@@ -24,7 +24,7 @@ module BoxGrinder
   describe Kickstart do
     KICKSTART_FEDORA_REPOS = {
         "11" => {
-            "base"    => {"mirrorlist" => "http://mirrors.fedoraproject.org/mirrorlist?repo=fedora-11&arch=#BASE_ARCH#"},
+            "base" => {"mirrorlist" => "http://mirrors.fedoraproject.org/mirrorlist?repo=fedora-11&arch=#BASE_ARCH#"},
             "updates" => {"mirrorlist" => "http://mirrors.fedoraproject.org/mirrorlist?repo=updates-released-f11&arch=#BASE_ARCH#"}
         }
     }
@@ -37,7 +37,8 @@ module BoxGrinder
       @appliance_config.stub!(:name).and_return('full')
       @appliance_config.stub!(:version).and_return(1)
       @appliance_config.stub!(:release).and_return(0)
-      @appliance_config.stub!(:os).and_return(OpenCascade.new({:name => 'fedora', :version => '11'}))
+      @appliance_config.stub!(:os).and_return(OpenCascade.new({:name => 'fedora', :version => '11', :password => 'boxgrinder'}))
+      @appliance_config.stub!(:packages).and_return(["gcc-c++", "wget"])
 
       @kickstart = Kickstart.new(@config, @appliance_config, repos, OpenCascade.new(:base => 'a/base/dir'))
     end
@@ -48,14 +49,14 @@ module BoxGrinder
 
         @appliance_config.stub!(:hardware).and_return(
             OpenCascade.new({
-                             :partitions =>
-                                 {
-                                     '/' => {'size' => 2},
-                                     '/home' => {'size' => 3},
-                                 },
-                             :arch => 'i686',
-                             :base_arch => 'i386'
-                         })
+                                :partitions =>
+                                    {
+                                        '/' => {'size' => 2},
+                                        '/home' => {'size' => 3},
+                                    },
+                                :arch => 'i686',
+                                :base_arch => 'i386'
+                            })
         )
 
         @appliance_config.should_receive(:repos).and_return(
@@ -65,8 +66,6 @@ module BoxGrinder
             ]
         )
 
-        @appliance_config.should_receive(:os).and_return(OpenCascade.new({:password => 'boxgrinder'}))
-        @appliance_config.stub!(:packages).and_return(OpenCascade.new({:includes => ["gcc-c++", "wget"]}))
         @appliance_config.should_receive(:default_repos).and_return(true)
 
         definition = @kickstart.build_definition
@@ -78,13 +77,13 @@ module BoxGrinder
         definition['repos'][2].should == "repo --name=cirras --cost=42 --baseurl=http://repo.boxgrinder.org/packages/fedora/11/RPMS/i686"
         definition['repos'][3].should == "repo --name=abc --cost=43 --mirrorlist=http://abc.org/packages/fedora/11/RPMS/i686"
 
-        definition['packages'].size.should == 2
-        definition['packages'].should == ["gcc-c++", "wget"]
+        definition['appliance_config'].packages.size.should == 2
+        definition['appliance_config'].packages.should == ["gcc-c++", "wget"]
 
-        definition['root_password'].should == "boxgrinder"
-        definition['partitions'].size.should == 2
-        definition['partitions']['/']['size'].should == 2
-        definition['partitions']['/home']['size'].should == 3
+        definition['appliance_config'].os.password.should == "boxgrinder"
+        definition['appliance_config'].hardware.partitions.size.should == 2
+        definition['appliance_config'].hardware.partitions['/']['size'].should == 2
+        definition['appliance_config'].hardware.partitions['/home']['size'].should == 3
       end
 
       it "should prepare valid definition without default repos" do
@@ -92,18 +91,16 @@ module BoxGrinder
 
         @appliance_config.stub!(:hardware).and_return(
             OpenCascade.new({
-                             :partitions =>
-                                 {
-                                     '/' => {'size' => 2},
-                                     '/home' => {'size' => 3},
-                                 },
-                             :arch => 'i686',
-                             :base_arch => 'i386'
-                         })
+                                :partitions =>
+                                    {
+                                        '/' => {'size' => 2},
+                                        '/home' => {'size' => 3},
+                                    },
+                                :arch => 'i686',
+                                :base_arch => 'i386'
+                            })
         )
 
-        @appliance_config.should_receive(:os).and_return(OpenCascade.new({:password => 'boxgrinder'}))
-        @appliance_config.stub!(:packages).and_return(OpenCascade.new({:includes => ["gcc-c++", "wget"]}))
         @appliance_config.should_receive(:default_repos).and_return(false)
 
         @appliance_config.should_receive(:repos).and_return(
@@ -120,13 +117,13 @@ module BoxGrinder
         definition['repos'][0].should == "repo --name=cirras --cost=40 --baseurl=http://repo.boxgrinder.org/packages/fedora/11/RPMS/i686"
         definition['repos'][1].should == "repo --name=abc --cost=41 --mirrorlist=http://abc.org/packages/fedora/11/RPMS/i686"
 
-        definition['packages'].size.should == 2
-        definition['packages'].should == ["gcc-c++", "wget"]
+        definition['appliance_config'].packages.size.should == 2
+        definition['appliance_config'].packages.should == ["gcc-c++", "wget"]
 
-        definition['root_password'].should == "boxgrinder"
-        definition['partitions'].size.should == 2
-        definition['partitions']['/']['size'].should == 2
-        definition['partitions']['/home']['size'].should == 3
+        definition['appliance_config'].os.password.should == "boxgrinder"
+        definition['appliance_config'].hardware.partitions.size.should == 2
+        definition['appliance_config'].hardware.partitions['/']['size'].should == 2
+        definition['appliance_config'].hardware.partitions['/home']['size'].should == 3
       end
     end
   end
