@@ -2,6 +2,7 @@ v0.0.8
 
 * [BGBUILD-93] Add Red Hat Enterprise Linux 6 support
 * [BGBUILD-130] Add virtio support out of the box
+* [BGBUILD-101] Don't use 'includes' subsection when specifying packages
 
 v0.0.7
 
