@@ -4,6 +4,7 @@ v0.0.11
 * [BGBUILD-79] Allow to use BoxGrinder Build as a library
 * [BGBUILD-126] Use encrypted password in kickstart files
 * [BGBUILD-72] Add support for growing (not pre-allocated) disks for KVM/Xen
+* [BGBUILD-101] Don't use 'includes' subsection when specifying packages
 
 v0.0.10
 
