@@ -1,6 +1,7 @@
 v0.0.7
 
 * [BGBUILD-131] Check if OS is supported before executing the plugin
+* [BGBUILD-101] Don't use 'includes' subsection when specifying packages
 
 v0.0.6
 
